changed act_1.html and new files

--- a/act_1.html
+++ b/act_1.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Act_1</title>
+  <link rel="stylesheet" href="external.css" />
+ </head>
+ <body>
+  <div class="container">
+   <div class="images">
+    <img src="jireh1.jpg" alt="" />
+    <h2>This is Me</h2>
+   </div>
+   <div class="images">
+    <img src="jireh2.jpg" alt="" />
+    <h2>Jireh</h2>
+   </div>
+   <div class="images">
+    <img src="jireh3.jpg" alt="" />
+    <h2>Xaris</h2>
+   </div>
+   <div class="images">
+    <img src="jireh4.jpg" alt="" />
+    <h2>Dumindin</h2>
+   </div>
+  </div>
+ </body>
+</html>
